--- a/quadragesimo site/index.html
+++ b/quadragesimo site/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/estilo.css">
+    <link rel="stylesheet" href="/quadragesimo site/css/estilo.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 
     
@@ -27,7 +27,7 @@
 </header>
     <section class="home">
         <div class="home-img">
-            <img src="/img/gato-digitando.gif">
+            <img src="/quadragesimo site/img/gato-digitando.gif">
         </div>
         <div class="home-content">
             <h1>Oi, meu nome é <span>Eduardo</span></h1>
