--- a/quadragesimo site/index.html
+++ b/quadragesimo site/index.html
@@ -27,13 +27,13 @@
 </header>
     <section class="home">
         <div class="home-img">
-            <img src="/quadragesimo site/img/gato-digitando.gif">
+            <img src="/quadragesimo site/img/vecteezy_judging-cat-meme-sticker-illustration_45765136.png">
         </div>
         <div class="home-content">
             <h1>Oi, meu nome é <span>Eduardo</span></h1>
             <h3 class="typing-text">Eu sou <span></span></h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium quae excepturi adipisci consectetur atque sint rem, molestias impedit repellat aliquam ratione velit doloremque veniam commodi, vel maiores non nisi obcaecati.</p>
-            <div class="sociol-icons">
+            <div class="social-icons">
                 <a href="https://i.pinimg.com/736x/c0/b1/bc/c0b1bc7fe06a2f166230eff817a47d7f.jpg"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="https://i.pinimg.com/originals/8b/19/fe/8b19feb0d9eec43509283e74917a7fe9.gif"><i class="fa-brands fa-github"></i></a>
                 <a href="https://s2-oglobo.glbimg.com/TBHKF5iXMhHB2JEzL8iVEMRQshU=/0x0:439x273/888x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_da025474c0c44edd99332dddb09cabe8/internal_photos/bs/2023/U/C/V9PkuMSEu3hQDv1bzUmg/screenshot-201.png"><i class="fa-brands fa-twitter"></i></a>
