--- a/quadragesimo site/index.html
+++ b/quadragesimo site/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="home-content">
             <h1>Oi, meu nome é <span>Eduardo</span></h1>
-            <h3 class="typing-text">Eu sou <span></span></h3>
+            <h3 class="typing-text">Eu sou <span id="typing"></span></h3>
             <p>um jovem curioso e apaixonado por tecnologia, que já trilha seus primeiros passos na área de TI com determinação. Fascinado por programação, hardware e cibersegurança, ele sonha em trabalhar fora do Brasil, sempre em busca de novos desafios e aprendizados.</p>
             <div class="social-icons">
                 <a href="https://i.pinimg.com/736x/c0/b1/bc/c0b1bc7fe06a2f166230eff817a47d7f.jpg"><i class="fa-brands fa-linkedin"></i></a>
@@ -44,5 +44,51 @@
             <a href="/quadragesimo site/img/gato-digitando.gif" class="btn">Me contrate</a>
         </div>
     </section>
+    <script>
+const texts = [
+    "Um Desenvolvedor Front-End",
+    "Um Desenvolvedor de Jogos",
+    "Um Jogador de E-Sports",
+    "Um Atleta de basquete",
+    "Um estudante de TI",
+    "Um aspirante a programador",
+    "Um entusiasta de hardware",
+    "Um futuro profissional de cibersegurança",
+    "Um explorador de novas tecnologias",
+    "Um aprendiz constante",
+    "Um sonhador determinado"
+
+];
+let count = 0;
+let index = 0;
+let currentText = '';
+let letter = '';
+let isDeleting = false;
+const typingElement = document.getElementById('typing');
+
+function type() {
+    currentText = texts[count % texts.length];
+    if (isDeleting) {
+        letter = currentText.substring(0, index--);
+    } else {
+        letter = currentText.substring(0, index++);
+    }
+    typingElement.textContent = letter;
+
+    let typeSpeed = 120;
+    if (isDeleting) typeSpeed /= 2;
+
+    if (!isDeleting && index === currentText.length + 1) {
+        isDeleting = true;
+        typeSpeed = 1000; 
+    } else if (isDeleting && index === 0) {
+        isDeleting = false;
+        count++;
+        typeSpeed = 500; 
+    }
+    setTimeout(type, typeSpeed);
+}
+type();
+</script>
 </body>
 </html>
