--- a/quadragesimo site/index.html
+++ b/quadragesimo site/index.html
@@ -27,7 +27,7 @@
 </header>
     <section class="home">
         <div class="home-img">
-            <img src="/quadragesimo site/img/vecteezy_judging-cat-meme-sticker-illustration_45765136.png">
+            <img src="/quadragesimo site/img/Funny Cat Sticker - Funny Cat Dance - Discover & Share GIFs.gif">
         </div>
         <div class="home-content">
             <h1>Oi, meu nome é <span>Eduardo</span></h1>
