--- a/quadragesimo site/index.html
+++ b/quadragesimo site/index.html
@@ -120,7 +120,7 @@ type();
             <h3><span>Contato</span></h3>
             <p>Fique à vontade para entrar em contato comigo!<br>
         Você pode me encontrar pelas redes sociais acima ou, se preferir, envie um e-mail para: <a href="mailto:dudulona07@gmail.com">dudulona07@gmail.com</a>.<br><br>
-        Estou aberto a parcerias, convites para eventos, colaborações em projetos e oportunidades educacionais.<br>
+        Estou aberto a parcerias, convites para eventos, colaborações em projetos e oportunidades de projetos.<br>
         Vamos conversar e construir algo juntos?</p>
             <img src="https://images.steamusercontent.com/ugc/2461851703910196244/D4F1F637070C9C3A9ADBEE08FD173A92A26AEA64/?imw=640&&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false" alt="img menu">
         </section>
