--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/quadragesimo site/css/estilo.css">
+    <link rel="stylesheet" href="css/estilo.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 
-    
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
     <title>Portifólio</title>
     <meta name="description" content="Esse é um site de um portifólio profissional">
     <meta name="keywords" content="profissional, programador, desenvolvedor , tecnologia.">
