--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </header>
     <section class="home">
         <div class="home-img">
-            <img src="/quadragesimo site/img/Funny Cat Sticker - Funny Cat Dance - Discover & Share GIFs.gif">
+            <img src="img/426ff52dd1ad41efc73298d98d7ede91.gif">
         </div>
         <div class="home-content">
             <h1>Oi, meu nome é <span>Eduardo</span></h1>
